2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* math/math.scn, mathf/mathf.scn, mathl/mathl.scn: Regenerate.
	* Makefile.am, configure.ac: Add mathf/, mathl/.
	* math/init.c, math/Makefile.am: Reflect having split-out
	mathl and mathf.
	* math/domathf.c, math/domathl.c: Remove.
	* mathf/Makefile.am, mathf/domathf.c, mathf/init.c,
	mathf/mathf.scn: New (Split out from math/).
	* mathl/Makefile.am, mathf/domathl.c, mathl/init.c,
	mathl/mathl.scn: New (Split out from math/).

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* math/init.c, complex/init.c: 
	Use fprintf(stdout,..) instead of printf.
	Use CONFIGURE_APPLICATION_DISABLE_FILESYSTEM.

2011-01-31	Ralf Corsépius <ralf.corsepius@rtems.org>

	* POSIX/clock_gettime.c, POSIX/gettimeofday.c: New.
	* POSIX/Makefile.am: Add clock_gettime, gettimeofday.c.

2011-01-28	Bharath Suri <bharath.s.jois@gmail.com>

	PR 1661/testing
	* termios06/init.c: Extend the test to cover sections related to
	flow control in termios.c
	* termios06/termios06.doc: Updated test concept
	* termios06/termios06.scn: Updated test run log

2011-01-10	Ralf Corsépius <ralf.corsepius@rtems.org>

	* math/domath.in: Fix typo in printf.
	* math/domath.c, math/domathf.c, math/domathl.c: Regenerate.
	* math/math.scn: Regenerate.

2011-01-10	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Use ac_cv_header_complex_h.

2010-12-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* math/Makefile.am, math/init.c: Init task has to be floating point and
	there is no point in using optional manager stubs since libio needs
	semaphores.

2010-12-01	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Check for complex.h.
	Add AM_CONDITIONAL(HAS_COMPLEX) to allow building with outdated
	toolchains.
	* complex/Makefile.am: Apply HAS_COMPLEX.

2010-11-30	Ralf Corsépius <ralf.corsepius@rtems.org>
